Fix UI issues with special channels
As a reminder, "special" channels right now are banlists and channel lists.

- Remove that bottom margin that was causing things to hide behind the message input. This was probably relevant before the whole UI was flexbox-based and was not removed when switching.
- Do not align to bottom on special channels
- Hide unread and date markers on special channels
- Make sure table headers in special channels are not truncated, which was for example the case with "Users" being broken up ("User" and "s" on 2 different lines)

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -877,10 +877,6 @@ kbd {
 	right: 180px;
 }
 
-#chat .special {
-	bottom: -47px;
-}
-
 #viewport.rt .chat {
 	right: 0;
 }
@@ -923,6 +919,9 @@ kbd {
 #chat .messages {
 	padding: 10px 0;
 	touch-action: pan-y;
+}
+
+#chat .chan:not(.special) .messages {
 	margin-top: auto;
 }
 
@@ -1037,6 +1036,15 @@ kbd {
 #chat .special .time,
 #chat .special .from {
 	display: none;
+}
+
+#chat .special .date-marker-container,
+#chat .special .unread-marker {
+	display: none;
+}
+
+#chat .special table th {
+	word-break: normal;
 }
 
 /* Nicknames */
